# ai-safety-ethics

./: .gitignore  README.md  pyproject.toml  requirements.txt
AI Ethics/: analysis.ipynb  util.py
AI Ethics/data/: AIES.json  AIES.ris  FACCT.ris
AI Ethics/output/: embeddings.p  tfidf_scores-aies.csv  tfidf_scores-facct.csv  topics-both.html
ai-safety-review/: README.md
ai-safety-review/code/: analysis.ipynb  analysis.py  maps.py  util.py
code/: analysis.ipynb  analysis.py  maps.py  util.py
comparison-ethics-safety/: analysis.ipynb  methodology.docx
comparison-ethics-safety/data/ethics/: FACCT-old.json
comparison-ethics-safety/data/safety/: all_safety.json  all_safety.ris
comparison-ethics-safety/data/safety/dblp/: dblp_data.json  multiple_hits.json  not_found.json
data/: Q4A.json  snowballing.json  structured_search.json
data/analysis/: least_similar.html  similar_table.html
data/ethics/: AIES-2023.ris  AIES.json  AIES.ris  FACCT-2023.ris  FACCT.json  FACCT.ris  all_ethics.json  all_ethics.ris
data/safety/: all_safety.json  all_safety.ris
data/safety/dblp/: dblp_data.json  multiple_hits.json  not_found.json
src/: analysis.py  maps.py  util.py
